--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 <body>
    <div class="Top-container
 	" >	
-	<img class="top-cloud" src="/cloud.png" alt="cloud-img">						 
+	<img class="top-cloud" src="cloud.png" alt="cloud-img">						 
    <h1> Im zainab </h1>
    <h2 class="programmer">a programmer</h2>
-      <img class="bottom-cloud" src="/cloud.png" alt="cloud-img">
-   <img   src="/mountain.png" alt="mountain-img" width="300px">
+      <img class="bottom-cloud" src="cloud.png" alt="cloud-img">
+   <img   src="mountain.png" alt="mountain-img" width="300px">
    </div>
        <div class="middle-container">
          <div class="profile">
-           <img src="/download.jpg" alt="profile" width="300px">
+           <img src="download.jpg" alt="profile" width="300px">
            <h2>Hello</h2>
            <p class="intro">Iam web Developer. Nuclear Engineering Expert.And if you want to make me happy please come in with coffee❤</p>
          </div>
@@ -25,12 +25,12 @@
          <div class="skills">
            <h2>My Skills.</h2>
            <div class="skill-row">
-             <img class="code-img" src="/91GdvNm+2lL._AC_SL1500_.jpg" alt="skill">
+             <img class="code-img" src="91GdvNm+2lL._AC_SL1500_.jpg" alt="skill">
              <h3>Design&Development</h3>
              <p class="">I started lerning to code when I was 22 years old because Creating is one my favorite pastimes.</p>
            </div>
            <div class="skill-row">
-             <img class="music" src="/download (1).jpg" alt="skil">
+             <img class="music" src="download (1).jpg" alt="skil">
              <h3>Singer&Philharmonic</h3>
              <p class="">when you sing with all your being, the moment your separated from time and place ,true music can be a part of my soul.</p>
            </div>
